// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  id="security_hotspots"
>
  <Suggestions
    suggestions="security_hotspots"
  />
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="hotspots.page"
  />
  <A11ySkipTarget
    anchor="security_hotspots_main"
  />
  <withCurrentUserContext(FilterBar)
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
      }
    }
    filters={
      {
        "assignedToMe": false,
        "inNewCodePeriod": false,
        "status": "TO_REVIEW",
      }
    }
    isStaticListOfHotspots={true}
    loadingMeasure={false}
    onBranch={false}
    onChangeFilters={[MockFunction]}
  />
  <EmptyHotspotsPage
    filterByFile={false}
    filtered={false}
    isStaticListOfHotspots={true}
  />
</div>
`;

exports[`should render correctly when filtered by category or cwe: category 1`] = `
<div
  className="layout-page-side"
  style={
    {
      "top": 0,
    }
  }
>
  <div
    className="layout-page-side-inner"
  >
    <HotspotSimpleList
      filterByCategory={
        {
          "category": "a1",
          "standard": "owaspTop10",
        }
      }
      hotspots={
        [
          {
            "author": "Developer 1",
            "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
            "creationDate": "2013-05-13T17:55:39+0200",
            "key": "h1",
            "line": 81,
            "message": "'3' is a magic number.",
            "project": "com.github.kevinsawicki:http-request",
            "resolution": undefined,
            "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
            "securityCategory": "command-injection",
            "status": "TO_REVIEW",
            "updateDate": "2013-05-13T17:55:39+0200",
            "vulnerabilityProbability": "HIGH",
          },
          {
            "author": "Developer 1",
            "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
            "creationDate": "2013-05-13T17:55:39+0200",
            "key": "h2",
            "line": 81,
            "message": "'3' is a magic number.",
            "project": "com.github.kevinsawicki:http-request",
            "resolution": undefined,
            "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
            "securityCategory": "command-injection",
            "status": "TO_REVIEW",
            "updateDate": "2013-05-13T17:55:39+0200",
            "vulnerabilityProbability": "HIGH",
          },
        ]
      }
      hotspotsTotal={2}
      loadingMore={false}
      onHotspotClick={[MockFunction]}
      onLoadMore={[MockFunction]}
      onLocationClick={[MockFunction]}
      selectedHotspot={
        {
          "author": "Developer 1",
          "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
          "creationDate": "2013-05-13T17:55:39+0200",
          "key": "h1",
          "line": 81,
          "message": "'3' is a magic number.",
          "project": "com.github.kevinsawicki:http-request",
          "resolution": undefined,
          "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
          "securityCategory": "command-injection",
          "status": "TO_REVIEW",
          "updateDate": "2013-05-13T17:55:39+0200",
          "vulnerabilityProbability": "HIGH",
        }
      }
      standards={
        {
          "cwe": {
            "1004": {
              "title": "Sensitive Cookie Without 'HttpOnly' Flag",
            },
            "unknown": {
              "title": "No CWE associated",
            },
          },
          "owaspAsvs-4.0": {
            "1": {
              "title": "New OWASP ASVS cat 1",
            },
          },
          "owaspTop10": {
            "a1": {
              "title": "Injection",
            },
            "a2": {
              "title": "Broken Authentication",
            },
            "a3": {
              "title": "Sensitive Data Exposure",
            },
          },
          "owaspTop10-2021": {
            "a1": {
              "title": "Injection",
            },
            "a2": {
              "title": "Broken Authentication",
            },
            "a3": {
              "title": "Sensitive Data Exposure",
            },
          },
          "pciDss-3.2": {
            "1": {
              "title": " Install and maintain a firewall configuration to protect cardholder data",
            },
          },
          "pciDss-4.0": {
            "2": {
              "title": "This is useless...",
            },
          },
          "sansTop25": {
            "insecure-interaction": {
              "title": "Insecure Interaction Between Components",
            },
            "porous-defenses": {
              "title": "Porous Defenses",
            },
            "risky-resource": {
              "title": "Risky Resource Management",
            },
          },
          "sonarsourceSecurity": {
            "buffer-overflow": {
              "title": "Buffer Overflow",
            },
            "rce": {
              "title": "Code Injection (RCE)",
            },
            "sql-injection": {
              "title": "SQL Injection",
            },
          },
        }
      }
    />
  </div>
</div>
`;

exports[`should render correctly when filtered by category or cwe: cwe 1`] = `
<div
  className="layout-page-side"
  style={
    {
      "top": 0,
    }
  }
>
  <div
    className="layout-page-side-inner"
  >
    <HotspotSimpleList
      filterByCWE="327"
      hotspots={
        [
          {
            "author": "Developer 1",
            "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
            "creationDate": "2013-05-13T17:55:39+0200",
            "key": "h1",
            "line": 81,
            "message": "'3' is a magic number.",
            "project": "com.github.kevinsawicki:http-request",
            "resolution": undefined,
            "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
            "securityCategory": "command-injection",
            "status": "TO_REVIEW",
            "updateDate": "2013-05-13T17:55:39+0200",
            "vulnerabilityProbability": "HIGH",
          },
          {
            "author": "Developer 1",
            "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
            "creationDate": "2013-05-13T17:55:39+0200",
            "key": "h2",
            "line": 81,
            "message": "'3' is a magic number.",
            "project": "com.github.kevinsawicki:http-request",
            "resolution": undefined,
            "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
            "securityCategory": "command-injection",
            "status": "TO_REVIEW",
            "updateDate": "2013-05-13T17:55:39+0200",
            "vulnerabilityProbability": "HIGH",
          },
        ]
      }
      hotspotsTotal={2}
      loadingMore={false}
      onHotspotClick={[MockFunction]}
      onLoadMore={[MockFunction]}
      onLocationClick={[MockFunction]}
      selectedHotspot={
        {
          "author": "Developer 1",
          "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
          "creationDate": "2013-05-13T17:55:39+0200",
          "key": "h1",
          "line": 81,
          "message": "'3' is a magic number.",
          "project": "com.github.kevinsawicki:http-request",
          "resolution": undefined,
          "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
          "securityCategory": "command-injection",
          "status": "TO_REVIEW",
          "updateDate": "2013-05-13T17:55:39+0200",
          "vulnerabilityProbability": "HIGH",
        }
      }
      standards={
        {
          "cwe": {
            "1004": {
              "title": "Sensitive Cookie Without 'HttpOnly' Flag",
            },
            "unknown": {
              "title": "No CWE associated",
            },
          },
          "owaspAsvs-4.0": {
            "1": {
              "title": "New OWASP ASVS cat 1",
            },
          },
          "owaspTop10": {
            "a1": {
              "title": "Injection",
            },
            "a2": {
              "title": "Broken Authentication",
            },
            "a3": {
              "title": "Sensitive Data Exposure",
            },
          },
          "owaspTop10-2021": {
            "a1": {
              "title": "Injection",
            },
            "a2": {
              "title": "Broken Authentication",
            },
            "a3": {
              "title": "Sensitive Data Exposure",
            },
          },
          "pciDss-3.2": {
            "1": {
              "title": " Install and maintain a firewall configuration to protect cardholder data",
            },
          },
          "pciDss-4.0": {
            "2": {
              "title": "This is useless...",
            },
          },
          "sansTop25": {
            "insecure-interaction": {
              "title": "Insecure Interaction Between Components",
            },
            "porous-defenses": {
              "title": "Porous Defenses",
            },
            "risky-resource": {
              "title": "Risky Resource Management",
            },
          },
          "sonarsourceSecurity": {
            "buffer-overflow": {
              "title": "Buffer Overflow",
            },
            "rce": {
              "title": "Code Injection (RCE)",
            },
            "sql-injection": {
              "title": "SQL Injection",
            },
          },
        }
      }
    />
  </div>
</div>
`;

exports[`should render correctly with hotspots 1`] = `
<div
  id="security_hotspots"
>
  <Suggestions
    suggestions="security_hotspots"
  />
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="hotspots.page"
  />
  <A11ySkipTarget
    anchor="security_hotspots_main"
  />
  <withCurrentUserContext(FilterBar)
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
      }
    }
    filters={
      {
        "assignedToMe": false,
        "inNewCodePeriod": false,
        "status": "TO_REVIEW",
      }
    }
    isStaticListOfHotspots={true}
    loadingMeasure={false}
    onBranch={false}
    onChangeFilters={[MockFunction]}
  />
  <EmptyHotspotsPage
    filterByFile={false}
    filtered={false}
    isStaticListOfHotspots={true}
  />
</div>
`;

exports[`should render correctly with hotspots 2`] = `
<div
  className="layout-page-side"
  style={
    {
      "top": 0,
    }
  }
>
  <div
    className="layout-page-side-inner"
  >
    <HotspotList
      hotspots={
        [
          {
            "author": "Developer 1",
            "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
            "creationDate": "2013-05-13T17:55:39+0200",
            "key": "h1",
            "line": 81,
            "message": "'3' is a magic number.",
            "project": "com.github.kevinsawicki:http-request",
            "resolution": undefined,
            "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
            "securityCategory": "command-injection",
            "status": "TO_REVIEW",
            "updateDate": "2013-05-13T17:55:39+0200",
            "vulnerabilityProbability": "HIGH",
          },
          {
            "author": "Developer 1",
            "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
            "creationDate": "2013-05-13T17:55:39+0200",
            "key": "h2",
            "line": 81,
            "message": "'3' is a magic number.",
            "project": "com.github.kevinsawicki:http-request",
            "resolution": undefined,
            "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
            "securityCategory": "command-injection",
            "status": "TO_REVIEW",
            "updateDate": "2013-05-13T17:55:39+0200",
            "vulnerabilityProbability": "HIGH",
          },
        ]
      }
      hotspotsTotal={3}
      isStaticListOfHotspots={true}
      loadingMore={false}
      onHotspotClick={[MockFunction]}
      onLoadMore={[MockFunction]}
      onLocationClick={[MockFunction]}
      securityCategories={{}}
      selectedHotspot={
        {
          "author": "Developer 1",
          "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
          "creationDate": "2013-05-13T17:55:39+0200",
          "key": "h2",
          "line": 81,
          "message": "'3' is a magic number.",
          "project": "com.github.kevinsawicki:http-request",
          "resolution": undefined,
          "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
          "securityCategory": "command-injection",
          "status": "TO_REVIEW",
          "updateDate": "2013-05-13T17:55:39+0200",
          "vulnerabilityProbability": "HIGH",
        }
      }
      statusFilter="TO_REVIEW"
    />
  </div>
</div>
`;

exports[`should render correctly: loading 1`] = `
<div
  id="security_hotspots"
>
  <Suggestions
    suggestions="security_hotspots"
  />
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="hotspots.page"
  />
  <A11ySkipTarget
    anchor="security_hotspots_main"
  />
  <withCurrentUserContext(FilterBar)
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
      }
    }
    filters={
      {
        "assignedToMe": false,
        "inNewCodePeriod": false,
        "status": "TO_REVIEW",
      }
    }
    isStaticListOfHotspots={true}
    loadingMeasure={false}
    onBranch={false}
    onChangeFilters={[MockFunction]}
  />
  <div
    className="layout-page"
  >
    <div
      className="layout-page-side-inner"
    >
      <DeferredSpinner
        className="big-spacer-top"
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly: no hotspots with filters 1`] = `
<div
  id="security_hotspots"
>
  <Suggestions
    suggestions="security_hotspots"
  />
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="hotspots.page"
  />
  <A11ySkipTarget
    anchor="security_hotspots_main"
  />
  <withCurrentUserContext(FilterBar)
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
      }
    }
    filters={
      {
        "assignedToMe": true,
        "inNewCodePeriod": false,
        "status": "TO_REVIEW",
      }
    }
    isStaticListOfHotspots={true}
    loadingMeasure={false}
    onBranch={false}
    onChangeFilters={[MockFunction]}
  />
  <EmptyHotspotsPage
    filterByFile={false}
    filtered={true}
    isStaticListOfHotspots={true}
  />
</div>
`;
